--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
 
+    <!-- Boostrap CSS -->
+
     <!-- Bagian Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-transparent fixed-top">
       <div class="container">
@@ -58,13 +60,13 @@
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
+          <img src="img/2.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item ">
           <img src="img/DSC03126.JPG" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
-          <img src="img/2.jpg" class="d-block w-100" alt="...">
-        </div>
-        <div class="carousel-item">
-          <img src="img/3.jpg" class="d-block w-100" alt="...">
+          <img src="img/images.jpg" class="d-block w-100" alt="...">
         </div>
       </div>
       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -77,5 +79,9 @@
       </a>
     </div>
     <!-- b Carousel -->
+
+
+
+
   </body>
 </html>
