--- a/artikel.html
+++ b/artikel.html
@@ -10,7 +10,7 @@
 
     <link rel="stylesheet" href="stylesheet.css">
 
-    <title>Hello, world!</title>
+    <title>Artikel</title>
   </head>
   <body>
     
@@ -46,6 +46,8 @@
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
         </ol>
         <div class="carousel-inner">
         <div class="carousel-item active">
@@ -56,6 +58,12 @@
         </div>
         <div class="carousel-item">
             <img src="img/images.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="img/gambar-1-B.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="img/gambar-3-B.jpg" class="d-block w-100" alt="...">
         </div>
         </div>
         <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -70,9 +78,10 @@
     <!-- b Carousel -->
 
     <!-- a Artikel -->
-    <div class="" id="kumpulan">
+    <div class="container" id="kumpulan">
+    <h1 style="text-align:center; margin-top: 30px; margin-bottom: 10px;">Artikel</h1>
     <ul class="list-unstyled">
-        <li class="media">
+      <li class="media">
         <img src="img/1.jpg" class="mr-3" alt="..." style="width: 250px;">
         <div class="media-body">
             <h5 class="mt-0 mb-1">List-ba object</h5>
@@ -110,6 +119,24 @@
     </ul>
     </div>
     <!-- b Artikel -->
+
+    <!-- a Pagination -->
+    <nav aria-label="Page navigation example">
+      <ul class="pagination justify-content-center">
+        <li class="page-item disabled">
+          <a class="page-link" href="#" tabindex="-1" aria-disabled="true">Previous</a>
+        </li>
+        <li class="page-item"><a class="page-link" href="#">1</a></li>
+        <li class="page-item"><a class="page-link" href="#">2</a></li>
+        <li class="page-item"><a class="page-link" href="#">3</a></li>
+        <li class="page-item">
+          <a class="page-link" href="#">Next</a>
+        </li>
+      </ul>
+    </nav>
+    <!-- b Pagination -->
+
+    <br>
 
     <!-- a Footer -->
     <div class="footer">
