--- a/index.html
+++ b/index.html
@@ -55,6 +55,8 @@
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+        <li data-target="#carouselExampleIndicators" data-slide-to="4"></li>
       </ol>
       <div class="carousel-inner">
         <div class="carousel-item active">
@@ -65,6 +67,12 @@
         </div>
         <div class="carousel-item">
           <img src="img/images.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="img/gambar-1-B.jpg" class="d-block w-100" alt="...">
+        </div>
+        <div class="carousel-item">
+          <img src="img/gambar-3-B.jpg" class="d-block w-100" alt="...">
         </div>
       </div>
       <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
@@ -78,15 +86,33 @@
     </div>
     <!-- b Carousel -->
 
+    <!-- a Yakusa -->
+    <div class="container bawah">
+      <h1 style="margin-bottom: 30px;">The Culture of Indonesia</h1>
+      <div class="row">
+        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12"><img class="img-circle" src="img/gambar-1-A.jpg" width="200px">
+          <h3>IMAN</h3>
+          <p class="text-center"><strong>Lorem Ipsum</strong>is simply dummy text of the printing and typesetting industry.</p>
+        </div>
+        <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12"><img class="img-circle" src="img/gambar-1-B.jpg" width="200px">
+          <h3>ILMU</h3>
+          <p class="text-center"><strong>Lorem Ipsum</strong>is simply dummy text of the printing and typesetting industry.</p>
+        </div><div class="col-lg-4 col-md-4 col-sm-12 col-xs-12"><img class="img-circle" src="img/gambar-1-C.jpg" width="200px">
+          <h3>AMAL</h3>
+          <p class="text-center"><strong>Lorem Ipsum</strong>is simply dummy text of the printing and typesetting industry.</p>
+        </div>
+      </div>
+    </div>
+    <!-- b Yakusa -->
+
     <!-- a media -->
     <div class="media">
       <img src="img/1.jpg" class="mr-3" alt="..." style="width: 510px">
       <div class="media-body">
-        <h5 class="mt-0">Judul di sini</h5>
-        Contoh isi konten media object. Media object bisa digunakan sebagai kolom komentar seperti pada contoh ini. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus. Contoh isi konten media object. Media object bisa digunakan sebagai kolom komentar seperti pada contoh ini. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus. Contoh isi konten media object. Media object bisa digunakan sebagai kolom komentar seperti pada contoh ini. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus. <br><br>
-        <a class="btn btn-primary ling"
-        
-        href="">Lebih Lengkap</a>
+        <h1 class="text-center" style="margin-bottom: 15px;">Profil</h1>
+        <h5 class="mt-0">Kepengurusan Periode 2020-2021</h5>
+        Contoh isi konten media object. Media object bisa digunakan sebagai kolom komentar seperti pada contoh ini. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus. Contoh isi konten media object. Media object bisa digunakan sebagai kolom komentar seperti pada contoh ini. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus. <br><br>
+        <a class="btn btn-primary ling" href="profil.html">Lebih Lengkap</a>
       </div>
     </div>
     <!-- b media -->
@@ -94,11 +120,10 @@
     <!-- a Media 2 -->
     <div class="media">
       <div class="media-body">
+        <h1 class="text-center" style="margin-bottom: 20px;">Tentang</h1>
         <h5 class="mt-0 mb-1">Media object</h5>
-        Contoh isi konten media object. Media object bisa digunakan sebagai kolom komentar seperti pada contoh ini. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus. Contoh isi konten media object. Media object bisa digunakan sebagai kolom komentar seperti pada contoh ini. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus. Contoh isi konten media object. Media object bisa digunakan sebagai kolom komentar seperti pada contoh ini. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus. <br><br>
-        <a class="btn btn-primary ling"
-        
-        href="">Lebih Lengkap</a>
+        Contoh isi konten media object. Media object bisa digunakan sebagai kolom komentar seperti pada contoh ini. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus. Contoh isi konten media object. Media object bisa digunakan sebagai kolom komentar seperti pada contoh ini. Fusce condimentum nunc ac nisi vulputate fringilla. Donec lacinia congue felis in faucibus. <br><br>
+        <a class="btn btn-primary ling text-center" href="tentang.html">Lebih Lengkap</a>
       </div>
       <img src="img/1.jpg" class="ml-3" alt="..." style="width: 510px">
     </div>
