--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ml-auto">
             <a class="nav-item nav-link active" href="#">Beranda <span class="sr-only">(current)</span></a>
-            <a class="nav-item nav-link" href="#">Profil</a>
+            <a class="nav-item nav-link" href="profil.html">Profil</a>
             <a class="nav-item nav-link" href="artikel.html">Artikel</a>
             <a class="nav-item nav-link" href="#">Tentang</a>
             <a class="nav-item nav-link btn btn-primary tombol" href="#">Login</a>
